# POO

./: CMakeLists.txt
doc/: Proiect POO - Documentatie.docx  README.txt
include/: car.h  client.h  display.h
src/: car.cpp  client.cpp  display.cpp  main.cpp
